Carousel style applied, need to fix jump by 3 ranks when med or smaller

--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -1,15 +1,9 @@
-/* .card-img-top {
-    width: 90%;
-    height: 15vw;
-    object-fit: cover;
-} */
-  
 .cards-wrapper {
     display: flex;
     justify-content: center;
   }
   .card img {
-    max-width: 100%;
+    max-width: auto;
     max-height: 100%;
   }
   .card {
@@ -17,6 +11,7 @@
     box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
     border: none;
     border-radius: 0;
+    width: 90vw;
   }
   .carousel-inner {
     padding: 1em;
@@ -30,8 +25,17 @@
     top: 50%;
     transform: translateY(-50%);
   }
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
     .card img {
-      height: 11em;
+        height: 11em;
     }
-  }
+
+    .card {
+        width: 20vw;
+    }
+}
+
+.carousel-img-div {
+    height: 225px;
+    overflow: hidden;
+}
